<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".FormCadastro">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_netflix_official_logo"
            android:minHeight="?attr/actionBarSize"
            android:backgroundTint="@color/white"
            android:layout_marginStart="20dp"
    />

    <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/informe_seu_email_e_senha_npara_iniciar_a_assinatura"
              android:textStyle="bold"
              android:textColor="@color/black"
              android:layout_margin="20dp"
              android:textSize="26sp"
              android:textAllCaps="false"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crie_sua_conta"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="22sp"
            android:textAllCaps="false"
    />

    <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/edit_text_cadastro"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
    />

    <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/edit_text_cadastro"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:inputType="numberPassword"
    />

    <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_cadastro"
            />

    <TextView
            android:id="@+id/mensagem_erro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
    />

</LinearLayout>